unistalled bootstrap, fixed searchbar  bleeding out of navbar

--- a/src/components/sideBar/SideBar.scss
+++ b/src/components/sideBar/SideBar.scss
@@ -6,97 +6,30 @@
     display:flex;
     height: 100px;
     width: 100%;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    font-size: 20px;
-
-    &__icon  {
-        margin-left: 2rem;
-        margin-right: 1rem;
-        font-size:  3rem;
-        background: none;
-        color: $icon-color;
-        position: relative;
-        top: 5px;
     
+    &__menuToggle {
+        font-size: 40px;
+        position: relative;
+        bottom: 8px;
+        left: 5px;
+        :visited{
+            color: $icon-color;
+        }
     }
 
-    &__search-bar {
+    &__title {
+        font-size: 2.3rem;
+        width: 40px;
+    }
+
+    &__searchbar {
         width: 40%;
-        margin-left: 15px;
 
         input { 
             border-radius: 5px;
             padding-left: 12px;
         }
     }
-
-    
-    
-}
-
-
-
-.nav-menu {
-    background-color: $icon-color;
-    width: 60%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 650ms;
-
-
-    &__text {
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        color: $text-color;
-        list-style: none;
-        height: 60px;
-    }
-    
-    &__text a {
-        text-decoration: none;
-        color: $text-color;
-        font-size: 18px;
-        width: 100%;
-        height: 100%;
-        display: flex; 
-        justify-content: left;
-        align-items: center;
-        border-radius: 4px;
-        border-bottom: 1px solid #dadada;
-        padding-left: 10px;
-    }
-    
-    &__text a:hover {
-        background-color:$hover-background-color;
-    }
-    
-    &__items {
-        width: 100%;
-    }
-    
-    &__header {
-        box-shadow: inset ;
-        width: 100%;
-        height: 40px;
-        display: flex;
-        justify-content: right;
-        align-items: center;
-        padding: 3px 0;
-        margin-right: 10px;
-    }
-
-    span {
-        margin-left: 16px;
-    }
-}
-
-.nav-menu.active {
-    left: 0;
-    transition: 350ms;
 }
